cargo-geiger/tests/snapshots/mod__test2_package_with_shallow_deps.stdout.snap
---
created: "2019-08-04T17:08:43.014906197Z"
creator: insta@0.10.0
source: cargo-geiger/tests/mod.rs
expression: stdout
---

Metric output format: x/y
    x = unsafe code used by the build
    y = total unsafe code found in the crate

Symbols: 
    🔒 = No `unsafe` usage found, declares #![forbid(unsafe_code)]
    ❓ = No `unsafe` usage found, missing #![forbid(unsafe_code)]
    ☢️[6C = `unsafe` usage found

Functions  Expressions  Impls  Traits  Methods  Dependency

1/1        0/0          0/0    0/0     0/0      ☢️[51Ctest2_package_with_shallow_deps 0.1.0
0/0        2/2          0/0    0/0     0/0      ☢️[51C├── ref_slice 1.1.1
1/1        1/1          0/0    0/0     0/0      ☢️[51C└── test1_package_with_no_deps 0.1.0

