cargo-geiger/tests/snapshots/mod__test5_workspace_with_virtual_manifest.stdout.snap
---
created: "2019-11-05T20:30:26.212139Z"
creator: insta@0.10.1
source: cargo-geiger/tests/mod.rs
expression: stdout
---

